<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:cardBackgroundColor="?attr/background_secondary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:textColor="?attr/text_primary"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_set_title" />
        <LinearLayout
            android:id="@+id/buttonHomeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/app_name"
                app:tint="?attr/text_primary"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_homescreen" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:textColor="?attr/text_primary"
                android:text="@string/dialog_set_home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLockScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/app_name"
                app:tint="?attr/text_primary"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_lockscreen" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:textColor="?attr/text_primary"
                android:text="@string/dialog_set_lock" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonBothScren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/app_name"
                app:tint="?attr/text_primary"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_bothscreen" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:textColor="?attr/text_primary"
                android:text="@string/dialog_set_both" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>