<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="5dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/detailImage"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:transitionName="image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/layoutPreview"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/buttonPlay"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:alpha="0.8"
                    android:src="@drawable/ic_play"
                    android:contentDescription="@string/app_name" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:alpha="0.6"
                    android:textColor="@color/white"
                    android:fontFamily="@font/medium"
                    android:text="@string/click_to_preview" />
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/layoutProgress"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:text="Download in progress" />
                    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        app:rcBackgroundColor="#CDCDCD"
                        app:rcProgressColor="?attr/accent_color"
                        app:rcRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.cardview.widget.CardView
                        android:id="@+id/buttonCancelDownload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp"
                        android:layout_marginTop="14dp"
                        app:cardBackgroundColor="?attr/accent_color">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:fontFamily="@font/bold"
                            android:paddingVertical="8dp"
                            android:paddingHorizontal="15dp"
                            android:includeFontPadding="false"
                            android:textSize="12sp"
                            android:text="@string/cancel_download" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/wallpaperPremium"
                android:visibility="gone"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_premium"
                android:layout_margin="15dp"
                android:alpha="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/buttonHashtag"
                android:visibility="gone"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/background_customize"
                android:alpha="0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/app_name"
                    app:tint="@color/grey"
                    android:src="@drawable/ic_hashtag" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonColor"
                android:visibility="gone"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/background_customize"
                android:alpha="0.8"
                app:layout_constraintEnd_toStartOf="@+id/buttonHashtag"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="1dp"
                    android:contentDescription="@string/app_name"
                    app:tint="?attr/background_primary"
                    android:src="@drawable/ic_hashtag" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:alpha="0.8"
                app:layout_constraintBottom_toBottomOf="parent">
                <io.github.florent37.shapeofview.shapes.CircleView
                    android:id="@+id/buttonApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="bottom">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="#80000000">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/app_name"
                            app:tint="@color/white"
                            android:src="@drawable/ic_customize" />
                    </FrameLayout>
                </io.github.florent37.shapeofview.shapes.CircleView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:gravity="center">
                    <LinearLayout
                        android:id="@+id/buttonDownload"
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/background_customize">
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="1dp"
                            android:contentDescription="@string/app_name"
                            android:tint="@color/gnt_black"
                            android:src="@drawable/ic_detail_download" />
                    </LinearLayout>
                    <io.github.florent37.shapeofview.shapes.CircleView
                        android:id="@+id/buttonCollectionRoot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp">
                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="#80000000">
                            <ImageView
                                android:id="@+id/buttonCollection"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_detail_start" />
                        </FrameLayout>
                    </io.github.florent37.shapeofview.shapes.CircleView>
                </LinearLayout>


                <io.github.florent37.shapeofview.shapes.CircleView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="bottom">
                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="#80000000">
                        <ImageView
                            android:id="@+id/buttonFavourite"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_detail_love" />
                    </FrameLayout>
                </io.github.florent37.shapeofview.shapes.CircleView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>